--- a/styles/scss/vtex.rich-text.scss
+++ b/styles/scss/vtex.rich-text.scss
@@ -287,6 +287,12 @@
   color: #fefefe;
   font-weight: 300;
 }
+.strong--footer-inner-text {
+  font-size: 14px;
+}
+.wrapper--store-footer {
+  font-size: 14px;
+}
 .headingLevel3--footer-text-sac {
   font-size: 18px;
   color: #fff;
